--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -60,6 +60,9 @@ div:focus {
 }
 
 // main-container global css
-.app-container {
+// .app-container {
+//   padding: 20px;
+// }
+.app-main {
   padding: 20px;
 }
