完成首页静态文件

--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -48,6 +48,6 @@
   box-sizing: content-box;
 }
 
-.el-card__header {
-  border-bottom: none;
-}
+// .el-card__header {
+//   border-bottom: none;
+// }
